...
                                    </view>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XGD-zL-fSk" userLabel="Row4">
                                        <rect key="frame" x="0.0" y="208.5" width="352" height="139"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="838-cR-60S" userLabel="Rock">
                                                <rect key="frame" x="106.5" y="0.0" width="139" height="139"/>
                                                <accessibility key="accessibilityConfiguration" identifier="clickRock"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" secondItem="838-cR-60S" secondAttribute="height" id="owW-z0-ZWP"/>
                                                </constraints>
                                                <state key="normal" image="Rock"/>
                                                <connections>
                                                    <action selector="clickRock:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rJI-hx-8nm"/>
...
                                    </view>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hwJ-VD-iwG" userLabel="Row5">
                                        <rect key="frame" x="0.0" y="347.5" width="352" height="139"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JiQ-OP-HdU" userLabel="Paper">
                                                <rect key="frame" x="18.5" y="0.0" width="139" height="139"/>
                                                <accessibility key="accessibilityConfiguration" identifier="clickPaper"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" secondItem="JiQ-OP-HdU" secondAttribute="height" id="DK1-Tz-7cp"/>
                                                </constraints>
                                                <state key="normal" image="Paper"/>
                                                <connections>
                                                    <action selector="clickPaper:" destination="BYZ-38-t0r" eventType="touchUpInside" id="T8A-nB-WNn"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VwW-wc-O79" userLabel="Scissors">
                                                <rect key="frame" x="194.5" y="0.0" width="139" height="139"/>
                                                <accessibility key="accessibilityConfiguration" identifier="clickScissors"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" secondItem="VwW-wc-O79" secondAttribute="height" id="dm0-HI-3CK"/>
                                                </constraints>
                                                <state key="normal" title="Button" image="Scissors"/>
                                                <connections>
                                                    <action selector="clickScissors:" destination="BYZ-38-t0r" eventType="touchUpInside" id="S8p-EY-JlN"/>
...
                                    </view>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8EA-Rm-CO6" userLabel="Row6">
                                        <rect key="frame" x="0.0" y="511.5" width="352" height="139"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Winner: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ev4-Ci-mcr">
                                                <rect key="frame" x="144" y="24.5" width="64" height="21"/>
                                                <accessibility key="accessibilityConfiguration" identifier="winnerLabel"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <color key="textColor" red="1" green="0.1857388616" blue="0.57339501380000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9X8-0z-ecN">
                                                <rect key="frame" x="114.5" y="88.5" width="123" height="32"/>
                                                <color key="backgroundColor" red="1" green="0.1857388616" blue="0.57339501380000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="clickRestart"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                <color key="tintColor" red="1" green="0.1857388616" blue="0.57339501380000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <state key="normal" title="Restart">
                                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
                                                <connections>
...
